--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,10 @@
 @use "assets/sass/normalize";
 @use "assets/sass/custom";
 
+@import url('https://fonts.googleapis.com/css2?family=Anybody:wght@100;200;300;400;500;600;800&family=Eczar:wght@400;500;700;800&family=Poppins:wght@100;200;300;400;500;600;700;900&family=Sora:wght@100;200;300;400;500;700&display=swap');
+
 :root {
+	/* COLOR PALETTE */
 	--primary-color: hsl(
 		color.hue(variables.$main-color),
 		color.saturation(variables.$main-color),
@@ -35,4 +38,69 @@
 		color.saturation(variables.$light-alt-color),
 		color.lightness(variables.$light-alt-color)
 	);
+
+	/* NAVBAR VARIABLES */
+	--navbar-height: 60px;
+}
+
+* {
+
+	&::-webkit-scrollbar {
+		height: 5px;
+		width: 6px;
+	}
+
+	&::-webkit-scrollbar-track {
+		background-color: transparent;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		border-radius: 50%;
+		background-color: var(--primary-color);
+	}
+}
+
+body {
+	font-family: "Poppins", sans-serif;
+}
+
+.no__script {
+	display: block;
+	width: 100%;
+	height: 100vh;
+	min-height: 100%;
+
+	&__container {
+		height: 100%;
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: center;
+
+		.content__image {
+			max-height: 330px;
+			width: auto;
+		}
+
+		.content {
+			display: flex;
+			flex-direction: column;
+			max-width: 460px;
+			padding: 0 0 1.5rem;
+			text-align: center;
+
+			.title {
+				font-weight: 800;
+				text-transform: uppercase;
+				margin-bottom: .5rem;
+			}
+
+			.description {
+				font-size: 18px;
+				color: rgba($color: variables.$dark-alt-color, $alpha: 0.7);
+				letter-spacing: 1px;
+			}
+		}
+	}
 }
