Develop: not found, navbar, footer and login view. BC

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,20 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="container">
+        <div class="copyright">
+            <span>
+                &copy; Our Mall - 2022
+            </span>
+        </div>
+        <div class="links">
+            <a routerLink="privacy" class="link">
+                Privacidad
+            </a>
+            <a routerLink="terms" class="link">
+                T&eacute;rminos
+            </a>
+            <a routerLink="help" class="link">
+                Ayuda
+            </a>
+        </div>
+    </div>
+</footer>
