--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -5,15 +5,15 @@
             <span class="text">for Developers</span>
         </a>
         <nav>
-            <a routerLink="" class="link">
+            <a routerLink="products" class="link">
                 <i class="icon uil uil-apps"></i>
                 Productos
             </a>
-            <a routerLink="" class="link">
+            <a routerLink="docs" class="link">
                 <i class="icon uil uil-files-landscapes-alt"></i>
                 Documentaci&oacute;n
             </a>
-            <a routerLink="" class="link">
+            <a routerLink="login" class="link">
                 <i class="icon uil uil-window"></i>
                 Consola
             </a>
