--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 @use "assets/sass/variables";
 @use "assets/sass/normalize";
 @use "assets/sass/custom";
+@use "assets/sass/animations";
 
 @import url('https://fonts.googleapis.com/css2?family=Anybody:wght@100;200;300;400;500;600;800&family=Eczar:wght@400;500;700;800&family=Poppins:wght@100;200;300;400;500;600;700;900&family=Sora:wght@100;200;300;400;500;700&display=swap');
 
