--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -11,6 +11,28 @@
     min-height: 100%;
 }
 
-/*
+/* ================================================ */
+
+/* BUTTONS 
 ================================================
 */
+
+.core__button {
+    display: inline-flex;
+    padding: .85rem;
+    background-color: variables.$main-color;
+    color: variables.$light-color;
+    border: 1px solid rgba($color: variables.$dark-alt-color, $alpha: 0.5);
+
+    .icon {
+        margin-left: .5rem;
+    }
+
+    &:hover {
+        transition: .5s all ease-in;
+        border-radius: 10px;
+        background-color: variables.$main-alt-color;
+    }
+}
+
+/* ================================================= */
