--- a/src/app/modules/public/page-not-found/page-not-found.component.html
+++ b/src/app/modules/public/page-not-found/page-not-found.component.html
@@ -1,17 +1,16 @@
-<div class="not__found section">
-    <div class="container">
-        <img src="assets/images/404.svg" alt="Page not found demonstrative image">
-        <div class="content">
-            <h2 class="heading">
-                p&aacute;gina no encontrada
-            </h2>
-            <p class="error__description">
-                El lugar a donde intentas acceder no se encuentra encuentra disponible o no ha sido redactado
-            </p>
-            <a routerLink="" class="core__button">
-                Ir al inicio
-                <i class="icon uil uil-home"></i>
-            </a>
-        </div>
-    </div>
+<div class="not__found om-section">
+	<div class="container">
+		<img src="assets/images/404.svg" alt="Page not found demonstrative image" />
+		<div class="content">
+			<h2 class="heading">p&aacute;gina no encontrada</h2>
+			<p class="error__description">
+				El lugar a donde intentas acceder no se encuentra encuentra disponible o
+				no ha sido redactado
+			</p>
+			<a routerLink="" class="om-button-flex">
+				Ir al inicio
+				<i class="icon uil uil-home"></i>
+			</a>
+		</div>
+	</div>
 </div>
