--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,22 +1,26 @@
 <header class="navbar">
-    <div class="container">
-        <a routerLink="" class="brand">
-            <img class="logo" src="assets/logos/mall.png" alt="Main Our Mall aplication logo">
-            <span class="text">for Developers</span>
-        </a>
-        <nav>
-            <a routerLink="products" class="link">
-                <i class="icon uil uil-apps"></i>
-                Productos
-            </a>
-            <a routerLink="docs" class="link">
-                <i class="icon uil uil-files-landscapes-alt"></i>
-                Documentaci&oacute;n
-            </a>
-            <a routerLink="login" class="link">
-                <i class="icon uil uil-window"></i>
-                Consola
-            </a>
-        </nav>
-    </div>
+	<div class="container">
+		<a routerLink="home" routerLinkActive="active" class="brand">
+			<img
+				class="logo"
+				src="assets/logos/mall.png"
+				alt="Main Our Mall aplication logo"
+			/>
+			<span class="text">for Developers</span>
+		</a>
+		<nav>
+			<a routerLink="products" routerLinkActive="active" class="link">
+				<i class="icon uil uil-apps"></i>
+				Productos
+			</a>
+			<a routerLink="docs" routerLinkActive="active" class="link">
+				<i class="icon uil uil-files-landscapes-alt"></i>
+				Documentaci&oacute;n
+			</a>
+			<a routerLink="login" routerLinkActive="active" class="link">
+				<i class="icon uil uil-window"></i>
+				Consola
+			</a>
+		</nav>
+	</div>
 </header>
