--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 @use "assets/sass/custom";
 @use "assets/sass/animations";
 
-@import url('https://fonts.googleapis.com/css2?family=Anybody:wght@100;200;300;400;500;600;800&family=Eczar:wght@400;500;700;800&family=Poppins:wght@100;200;300;400;500;600;700;900&family=Sora:wght@100;200;300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Anybody:wght@100;200;300;400;500;600;800&family=Eczar:wght@400;500;700;800&family=Poppins:wght@100;200;300;400;500;600;700;900&family=Sora:wght@100;200;300;400;500;700&display=swap");
 
 :root {
 	/* COLOR PALETTE */
@@ -45,7 +45,6 @@
 }
 
 * {
-
 	&::-webkit-scrollbar {
 		height: 5px;
 		width: 6px;
@@ -56,8 +55,8 @@
 	}
 
 	&::-webkit-scrollbar-thumb {
-		border-radius: 50%;
-		background-color: var(--primary-color);
+		border-radius: 20px;
+		background-color: variables.$main-color;
 	}
 }
 
@@ -94,7 +93,7 @@ body {
 			.title {
 				font-weight: 800;
 				text-transform: uppercase;
-				margin-bottom: .5rem;
+				margin-bottom: 0.5rem;
 			}
 
 			.description {
