Develop: application form for register clients. BC

--- a/src/app/modules/private/console/applications/applications.component.html
+++ b/src/app/modules/private/console/applications/applications.component.html
@@ -16,7 +16,7 @@
             Creadas
         </h3>
         <div class="content">
-            <div class="card">
+            <div class="card" *ngFor="let app of apps">
                 <img class="card__image" src="assets/images/disconnected.png" alt="Application's name">
                 <div class="card__body">
                     <h4 class="name">App1</h4>
