--- a/src/app/modules/private/console/applications/applications.component.scss
+++ b/src/app/modules/private/console/applications/applications.component.scss
@@ -35,7 +35,7 @@
         flex-direction: column;
 
         .heading {
-            //
+            color: rgba($color: variables.$dark-alt-color, $alpha: 0.7);
         }
 
         .content {
@@ -50,20 +50,36 @@
                 justify-content: center;
                 align-items: center;
                 padding: 1rem;
-                margin-bottom: 1rem;
-                background-color: variables.$light-color;
-                border: 1px solid rgba($color: variables.$dark-alt-color, $alpha: 1.0);
+                margin: 1rem 0 2rem 0;
+                background-color: rgba($color: variables.$light-color, $alpha: 0.5);
+                border: 2px solid rgba($color: variables.$dark-alt-color, $alpha: 0.3);
                 border-radius: 10px;
+                transition: all 0.4s cubic-bezier(.86, .01, .15, .99);
+
 
                 &__image {
                     height: 100px;
                     width: 150px;
+                    margin: 1rem 0;
                 }
 
                 &__body {
+                    padding: .5rem;
 
                     .name {
+                        font-size: 1.25rem;
+                        color: rgba($color: variables.$dark-alt-color, $alpha: 0.8);
+                    }
+                }
 
+                &:hover {
+                    cursor: pointer;
+                    box-shadow: 0 1px 8px rgba($color: variables.$dark-alt-color, $alpha: 0.3);
+                    transform: translateY(-0.5rem);
+
+                    &::before {
+                        transform: scaleX(1) scaleY(1);
+                        background-color: yellow;
                     }
                 }
             }
