--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -56,9 +56,10 @@
 	color: variables.$light-color;
 	background-color: variables.$main-color;
 	border: 1px solid rgba($color: variables.$dark-alt-color, $alpha: 0.5);
+    transition: all 0.7s cubic-bezier(.86, .01, .15, .99);
 
 	&:hover {
-		transition: 0.5s all ease-in;
+		//transition: 0.5s all ease-in;
 		background-color: variables.$main-alt-color;
 		border-radius: 10px;
 	}
