--- a/src/app/modules/private/console/console.component.html
+++ b/src/app/modules/private/console/console.component.html
@@ -5,7 +5,7 @@
 				<div class="header">
 					<img
 						class="logo"
-						src="assets/logos/mall.png"
+						src="assets/logos/om-logo.svg"
 						alt="Our Mall main logo"
 					/>
 					<a routerLink="../console" class="title">Developer portal</a>
