--- a/src/app/modules/private/console/applications/applications.component.scss
+++ b/src/app/modules/private/console/applications/applications.component.scss
@@ -1,87 +1,88 @@
 @use "~src/assets/sass/variables";
 
 .om-container-flex {
-    height: 100%;
-    flex-direction: column;
-    padding: 2.25rem 2.5rem;
-    overflow-y: auto;
+	height: 100%;
+	flex-direction: column;
+	padding: 2.25rem 2.5rem;
+	overflow-y: auto;
 
-    .heading {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 1.5rem;
+	.heading {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		margin-bottom: 1.5rem;
 
-        .title {
-            color: rgba($color: variables.$dark-alt-color, $alpha: 1);
-            font-weight: 800;
-            letter-spacing: 1px;
-        }
+		.title {
+			color: rgba($color: variables.$dark-alt-color, $alpha: 1);
+			font-weight: 800;
+			letter-spacing: 1px;
+		}
 
-        .om-button-flex {
-            font-size: .85rem;
-        }
-    }
+		.om-button-flex {
+			font-size: 0.85rem;
+		}
+	}
 
-    .description {
-        font-size: 18px;
-        color: rgba($color: variables.$dark-alt-color, $alpha: 0.7);
-        margin-bottom: 2rem;
-    }
+	.description {
+		font-size: 18px;
+		color: rgba($color: variables.$dark-alt-color, $alpha: 0.7);
+		margin-bottom: 2rem;
+	}
 
-    .apps {
-        display: flex;
-        flex-direction: column;
+	.apps {
+		display: flex;
+		flex-direction: column;
 
-        .heading {
-            color: rgba($color: variables.$dark-alt-color, $alpha: 0.7);
-        }
+		.heading {
+			color: rgba($color: variables.$dark-alt-color, $alpha: 0.7);
+		}
 
-        .content {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
-            align-items: center;
+		.content {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-evenly;
+			align-items: center;
 
-            .card {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                padding: 1rem;
-                margin: 1rem 0 2rem 0;
-                background-color: rgba($color: variables.$light-color, $alpha: 0.5);
-                border: 2px solid rgba($color: variables.$dark-alt-color, $alpha: 0.3);
-                border-radius: 10px;
-                transition: all 0.4s cubic-bezier(.86, .01, .15, .99);
+			.card {
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: center;
+				padding: 1rem;
+				margin: 1rem 0 2rem 0;
+				background-color: rgba($color: variables.$light-color, $alpha: 0.5);
+				border: 2px solid rgba($color: variables.$dark-alt-color, $alpha: 0.3);
+				border-radius: 10px;
+				transition: all 0.4s cubic-bezier(0.86, 0.01, 0.15, 0.99);
 
-                &__image {
-                    height: 100px;
-                    width: 150px;
-                    margin: 1rem 0;
-                }
+				&__image {
+					height: 100px;
+					width: 150px;
+					margin: 1rem 0;
+				}
 
-                &__body {
-                    padding: .5rem;
+				&__body {
+					padding: 0.5rem;
 
-                    .name {
-                        font-size: 1.25rem;
-                        color: rgba($color: variables.$dark-alt-color, $alpha: 0.8);
-                    }
-                }
+					.name {
+						font-size: 1.25rem;
+						color: rgba($color: variables.$dark-alt-color, $alpha: 0.8);
+					}
+				}
 
-                &:hover {
-                    cursor: pointer;
-                    box-shadow: 0 1px 8px rgba($color: variables.$dark-alt-color, $alpha: 0.3);
-                    transform: translateY(-0.5rem);
+				&:hover {
+					cursor: pointer;
+					box-shadow: 0 1px 8px
+						rgba($color: variables.$dark-alt-color, $alpha: 0.3);
+					transform: translateY(-0.5rem);
 
-                    &::before {
-                        transform: scaleX(1) scaleY(1);
-                        background-color: yellow;
-                    }
-                }
-            }
-        }
-    }
+					&::before {
+						transform: scaleX(1) scaleY(1);
+						background-color: yellow;
+					}
+				}
+			}
+		}
+	}
 }
