--- a/src/app/modules/private/console/applications/create/create.component.scss
+++ b/src/app/modules/private/console/applications/create/create.component.scss
@@ -1,143 +1,143 @@
 @use "~src/assets/sass/variables";
 
 .om-container-flex {
-    height: 100%;
-    flex-direction: column;
-    justify-content: flex-start;
-    animation: 1s fadeIn 0s ease-in;
-    overflow-y: auto;
+	height: 100%;
+	flex-direction: column;
+	justify-content: flex-start;
+	animation: 1s fadeIn 0s ease-in;
+	overflow-y: auto;
 
-    .content {
-        //height: 100%; This line works without overflow-y
-        max-width: 866px;
-        padding: 2rem 1rem;
-        margin: 0 auto 0 auto;
-        display: flex;
-        flex-direction: column;
+	.content {
+		//height: 100%; This line works without overflow-y
+		max-width: 866px;
+		padding: 2rem 1rem;
+		margin: 0 auto 0 auto;
+		display: flex;
+		flex-direction: column;
 
-        .heading {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            padding-bottom: 2.5rem;
-            border-bottom: 2px solid rgba($color: variables.$dark-alt-color, $alpha: 0.3);
+		.heading {
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-start;
+			padding-bottom: 2.5rem;
+			border-bottom: 2px solid rgba($color: variables.$dark-alt-color, $alpha: 0.3);
 
-            .title {
-                margin-bottom: 1rem;
-            }
+			.title {
+				margin-bottom: 1rem;
+			}
 
-            .description {
-                font-size: 1.15rem;
-                font-weight: normal;
-                color: rgba($color: variables.$dark-alt-color, $alpha: 0.8);
-            }
-        }
+			.description {
+				font-size: 1.15rem;
+				font-weight: normal;
+				color: rgba($color: variables.$dark-alt-color, $alpha: 0.8);
+			}
+		}
 
-        .body {
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            margin: 2rem 0;
+		.body {
+			height: 100%;
+			display: flex;
+			flex-direction: column;
+			margin: 2rem 0;
 
-            &__form {
-                height: 100%;
-                display: flex;
-                flex-direction: column;
-                align-content: center;
-                margin: 0 .5rem;
+			&__form {
+				height: 100%;
+				display: flex;
+				flex-direction: column;
+				align-content: center;
+				margin: 0 0.5rem;
 
-                .om-field-group {
-                    width: 100%;
-                    display: flex;
-                    flex-direction: row;
-                    flex-wrap: wrap;
-                    align-items: center;
-                    justify-content: space-between;
+				.om-field-group {
+					width: 100%;
+					display: flex;
+					flex-direction: row;
+					flex-wrap: wrap;
+					align-items: center;
+					justify-content: space-between;
 
-                    .om-field {
-                        min-width: 48%;
-                        flex-wrap: wrap;
+					.om-field {
+						min-width: 48%;
+						flex-wrap: wrap;
 
-                        input {
-                            //min-width: 300px;
-                            display: block;
-                        }
-                    }
+						input {
+							//min-width: 300px;
+							display: block;
+						}
+					}
 
-                    .preview {
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
+					.preview {
+						display: flex;
+						justify-content: center;
+						align-items: center;
 
-                        &__logo {
-                            height: 150px;
-                            width: 150px;
-                            object-fit: contain;
-                        }
-                    }   
-                }
+						&__logo {
+							height: 150px;
+							width: 150px;
+							object-fit: contain;
+						}
+					}
+				}
 
-                .type {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: flex-start;
-                    padding: 0 0 1.5rem 0;
+				.type {
+					display: flex;
+					flex-direction: column;
+					justify-content: flex-start;
+					padding: 0 0 1.5rem 0;
 
-                    .header {
-                        margin-bottom: 1rem;
+					.header {
+						margin-bottom: 1rem;
 
-                        .title {
-                            padding-bottom: 1rem;
-                        }
+						.title {
+							padding-bottom: 1rem;
+						}
 
-                        .description {
-                            font-size: 14px;
-                        }
-                    }
+						.description {
+							font-size: 14px;
+						}
+					}
 
-                    &__content {
-                        display: flex;
-                        flex-direction: row;
-                        align-items: center;
+					&__content {
+						display: flex;
+						flex-direction: row;
+						align-items: center;
 
-                        .radio-input {
-                            cursor: pointer;
-                            margin-right: .5rem;
-                        }
+						.radio-input {
+							cursor: pointer;
+							margin-right: 0.5rem;
+						}
 
-                        .icon {
-                            font-size: 32px;
-                            margin-right: .5rem;
-                        }
+						.icon {
+							font-size: 32px;
+							margin-right: 0.5rem;
+						}
 
-                        .information {
-                            display: flex;
-                            flex-direction: column;
+						.information {
+							display: flex;
+							flex-direction: column;
 
-                            label {
-                                color: variables.$main-color;
-                                font-weight: 700;
-                            }
+							label {
+								color: variables.$main-color;
+								font-weight: 700;
+							}
 
-                            p {
-                                font-size: 14px;
-                            }
-                        }
-                    }
-                }
+							p {
+								font-size: 14px;
+							}
+						}
+					}
+				}
 
-                .om-field > label {
-                    font-weight: 600;
-                    padding: 0 0 .5rem .5rem;
-                    font-size: .75rem;
+				.om-field > label {
+					font-weight: 600;
+					padding: 0 0 0.5rem 0.5rem;
+					font-size: 0.75rem;
 
-                    &::after {
-                        content: "*";
-                        color: red;
-                        margin-left: .2rem;
-                    }
-                }
-            }
-        }
-    }
+					&::after {
+						content: "*";
+						color: red;
+						margin-left: 0.2rem;
+					}
+				}
+			}
+		}
+	}
 }
