--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -56,7 +56,7 @@
 	color: variables.$light-color;
 	background-color: variables.$main-color;
 	border: 1px solid rgba($color: variables.$dark-alt-color, $alpha: 0.5);
-    transition: all 0.7s cubic-bezier(.86, .01, .15, .99);
+	transition: all 0.7s cubic-bezier(0.86, 0.01, 0.15, 0.99);
 
 	&:hover {
 		//transition: 0.5s all ease-in;
