--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 		<a routerLink="home" routerLinkActive="active" class="brand">
 			<img
 				class="logo"
-				src="assets/logos/mall.png"
+				src="assets/logos/om-logo-2.svg"
 				alt="Main Our Mall aplication logo"
 			/>
 			<span class="text">for Developers</span>
@@ -17,7 +17,7 @@
 				<i class="icon uil uil-files-landscapes-alt"></i>
 				Documentaci&oacute;n
 			</a>
-			<a routerLink="login" routerLinkActive="active" class="link">
+			<a routerLinkActive="active" class="link" (click)="redirect()">
 				<i class="icon uil uil-window"></i>
 				Consola
 			</a>
