Update: authorization server credentials name. BC

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
 				<i class="icon uil uil-files-landscapes-alt"></i>
 				Documentaci&oacute;n
 			</a>
-			<a routerLinkActive="active" class="link" (click)="redirect()">
+			<a routerLink="login" routerLinkActive="active" class="link" (click)="authorize()">
 				<i class="icon uil uil-window"></i>
 				Consola
 			</a>
