Update: main logo in the navbar. BC

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -3,10 +3,10 @@
 		<a routerLink="home" routerLinkActive="active" class="brand">
 			<img
 				class="logo"
-				src="assets/logos/om-logo-2.svg"
+				src="assets/logos/om-logo.svg"
 				alt="Main Our Mall aplication logo"
 			/>
-			<span class="text">for Developers</span>
+			<span class="text">for Devs</span>
 		</a>
 		<nav>
 			<a routerLink="products" routerLinkActive="active" class="link">
