--- a/src/app/modules/public/page-not-found/page-not-found.component.scss
+++ b/src/app/modules/public/page-not-found/page-not-found.component.scss
@@ -14,6 +14,7 @@
 		img {
 			width: auto;
 			height: auto;
+			min-width: 250px;
 			padding: 1.5rem;
 		}
 
@@ -22,7 +23,7 @@
 			flex-direction: column;
 			justify-content: center;
 			align-items: center;
-			max-width: 420px;
+			max-width: 520px;
 			padding: 0.5rem 1rem;
 
 			.heading {
