--- a/src/app/modules/public/login/login.component.html
+++ b/src/app/modules/public/login/login.component.html
@@ -12,6 +12,7 @@
 							type="email"
 							id="email"
 							placeholder="Correo electr&oacute;nico"
+							autofocus
 						/>
 					</div>
 					<div class="om-field">
