--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -9,6 +9,7 @@
 			<span class="text">for Devs</span>
 		</a>
 		<nav>
+			<app-nav-link ></app-nav-link>
 			<a routerLink="products" routerLinkActive="active" class="link">
 				<i class="icon uil uil-apps"></i>
 				Productos
