--- a/src/app/modules/public/login/login.component.scss
+++ b/src/app/modules/public/login/login.component.scss
@@ -50,3 +50,12 @@
 		}
 	}
 }
+
+.disabled {
+	cursor:default;
+	background-color: variables.$main-alt-color;
+
+	&:hover {
+		border-radius: 0;
+	}
+}
